# Lithography

./: .gitignore  LICENSE  README.md  dgefuchwyt2-AssemblyJetson's Handle.3mf  io-panel2.FCStd  io-panel3.FCStd  uchwyt.FCStd  uchwyt2.FCStd
.github/: CODEOWNERS
electronics/litho_peripheral_board/: README.md  fp-info-cache  litho_peripheral_board.kicad_prl  ~litho_peripheral_board.kicad_sch.lck
mechanics/cad/: DIN-bracket.FCStd  Doorknob.FCStd  Magnetic_catch_part1.FCStd  Magnetic_catch_part2.FCStd  MountForFormatterBoard.FCStd  MountForFormatterBoard.step  MountforFrontboard.FCStd  Mountforfrontboard.step  PCB_holder.FCStd  PCB_holder2.FCStd  drilling_template_doorknob.FCStd  driver-bracket.FCStd  formatter-board-holder.FCStd  frame-hinge.FCStd  knob.FCStd  lithography.FCStd  panel-hinge.FCStd  platform.FCStd  plexi-mount-Panel-io.3mf  power-supply-bracket.FCStd  simplified_projector_model.stp  uchywtnapodlozethorlabs-BodyFillet003.step  uchywtnapodlozethorlabs.FCStd
mechanics/frame/: 30x30_angle bracket_1.step  frame.FCStd
software/app/: README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
software/gui/: components.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
software/sbc/: docker-compose.yml
software/sbc/api/: Dockerfile  README.md  main.py  pyproject.toml
software/sbc/api/app/: app.py
software/sbc/api/app/routers/: camera.py  mask.py  movement.py
software/sbc/api/app/utils/: camera.py
software/sbc/api/static/: maskview.html
(+102 files in other folders)
